updated skills, fixed scrollbar issue

--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -2,14 +2,14 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: 100%;
 }
 
 .part1 {
     width: 30%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
+    align-items: flex-start;
 }
 
 .part2 {
@@ -17,4 +17,5 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    justify-content: center;
 }
